7 December 2015: Wouter
	- Remove stuff from osx installer that logs out the user.

4 December 2015: Wouter
	- Fixup osx gui panel start code for new osx.  installer talks about
	  new locations and set permissions on key files and add to the path
	  the /usr/local/sbin directory during install.
	  Do not link RiggerStatusItem to /usr/local/opt/openssl/lib.

3 December 2015: Wouter
	- chmod key files for unbound, dnssec-trigger control and ldns in
	  /usr/local.  For OSX.
	- Fixup installer for creation of missing keys, and also start
	  panel in osx userspace.

26 November 2015: Wouter
	- Fix Makefile for use of /Library, which seems okay for new OSX.
	- makedist prints checksums on OSX.

6 November 2015: Wouter
	- new acx_nlnetlabs.m4 version and it has the libdl fix.
	- Fix lint warnings about int and size_t conversion.
	- Fixes to make the installer work on OSX-ElCapitan.

6 October 2015: Wouter
	- Patch for preliminary Mac OSX 10.11 support (from Philip Paeps).
	- Move plists into uidir on OSX (/usr/local/share), and set usr/local
	  in makedist for OSX.

1 October 2015: Wouter
	- default keysize for control is 3072 on windows.

31 August 2015: Wouter
	- Changed windows setup compression to be more transparent.

16 July 2015: Wouter
	- Patches from Tomas Hozza for systemd service files:
	  Set PIDFile in the dnssec-triggerd.service file.
	  Remove restorecon call in dnssec-triggerd-keygen.service.

14 July 2015: Wouter
	- Patches from Tomas Hozza for dnssec-trigger-script:
	  Use one import on one line as defined by PEP8.
	  Use path to DEVNULL from os module.
	  Move the main functionality into main() function to enable testing.
	  Use existing API in NM for distinguishing VPN connections.
	  Construct NMClient as advised by the documentation.
	  Forbid Python from searching local dirs and using env variables.
	  Set low max negative cache TTL to prevent possible user issues.
	  Send SIGHUP to NM if it is new enough instead of restarting it.